--- a/EnglishLearnBLL/EnglishLearnBLL.csproj
+++ b/EnglishLearnBLL/EnglishLearnBLL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\TestCreator.cs" />
     <Compile Include="View\WordViewer.cs" />
+    <Compile Include="WordLevelManager\WordLevelManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj">
