--- a/WpfUI/packages.config
+++ b/WpfUI/packages.config
@@ -4,4 +4,5 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.1" targetFramework="net451" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net451" />
+  <package id="NAudio" version="1.7.1" targetFramework="net45" />
 </packages>
