--- a/EnglishLearnBLL/EnglishLearnBLL.csproj
+++ b/EnglishLearnBLL/EnglishLearnBLL.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Models\WriteTestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\TestCreator.cs" />
+    <Compile Include="ToXML\WordsExporter.cs" />
+    <Compile Include="ToXML\WordsImporter.cs" />
     <Compile Include="View\WordViewer.cs" />
     <Compile Include="WordLevelManager\WordLevelManager.cs" />
   </ItemGroup>
