changed view model

--- a/EnglishLearnBLL/EnglishLearnBLL.csproj
+++ b/EnglishLearnBLL/EnglishLearnBLL.csproj
@@ -41,10 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mapping\ModelMapper.cs" />
-    <Compile Include="Models\WordViewModel.cs" />
+    <Compile Include="Models\WordJsonModel.cs" />
     <Compile Include="Models\PickerTestModel.cs" />
     <Compile Include="Models\ResponseModel.cs" />
     <Compile Include="Models\WordsCloudModel.cs" />
+    <Compile Include="Models\WordViewModel.cs" />
     <Compile Include="Models\WriteTestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\TestCreator.cs" />
