--- a/TewCloud/TewCloud.csproj
+++ b/TewCloud/TewCloud.csproj
@@ -190,7 +190,10 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\ajax-loader.gif" />
     <Content Include="Content\Images\background1.jpg" />
+    <Content Include="Content\Images\downloadButton.jpg" />
     <Content Include="Content\Images\london.jpg" />
+    <Content Include="Content\Images\multy-user.png" />
+    <Content Include="Content\Images\words.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
