--- a/WpfUI/WpfUI.csproj
+++ b/WpfUI/WpfUI.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Helpers\BingTranslater.cs" />
     <Compile Include="Helpers\DialogHelper.cs" />
     <Compile Include="Helpers\GoogleTranslater.cs" />
+    <Compile Include="Helpers\MapperHelper.cs" />
     <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Helpers\SynchronizeHelper.cs" />
     <Compile Include="Pages\AddWordsPage.xaml.cs">
@@ -133,6 +134,7 @@
     </Compile>
     <Compile Include="Services\DataProvider.cs" />
     <Compile Include="Services\UserDataProvider.cs" />
+    <Compile Include="Services\WordsDataProvider.cs" />
     <Compile Include="Switcher.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
