--- a/TewCloud/TewCloud.csproj
+++ b/TewCloud/TewCloud.csproj
@@ -179,7 +179,9 @@
     <Compile Include="Controllers\CheckUpdateController.cs" />
     <Compile Include="Controllers\ClientFilesInfoController.cs" />
     <Compile Include="Controllers\ClientFilesUpdateController.cs" />
+    <Compile Include="Controllers\WebAppVersion\ChangePasswordController.cs" />
     <Compile Include="Controllers\WebAppVersion\PickerTestsController.cs" />
+    <Compile Include="Controllers\WebAppVersion\ResetPasswordController.cs" />
     <Compile Include="Controllers\WebAppVersion\WordsManagerController.cs" />
     <Compile Include="Controllers\WebAppVersion\SignInController.cs" />
     <Compile Include="Controllers\WebAppVersion\SignUpController.cs" />
