--- a/TewCloud/TewCloud.csproj
+++ b/TewCloud/TewCloud.csproj
@@ -210,7 +210,6 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Auth\UserProvider.cs" />
-    <Compile Include="Controllers\AngularjsController.cs" />
     <Compile Include="Controllers\CheckUpdateController.cs" />
     <Compile Include="Controllers\ClientFilesInfoController.cs" />
     <Compile Include="Controllers\ClientFilesUpdateController.cs" />
@@ -251,11 +250,14 @@
     <Content Include="Global.asax" />
     <Content Include="irregular_verbs.html" />
     <Content Include="Scripts\AngularJS\app\js\app.js" />
+    <Content Include="Scripts\AngularJS\app\js\app.routes.js" />
     <Content Include="Scripts\AngularJS\app\js\boot.js" />
     <Content Include="Scripts\AngularJS\app\js\main.js" />
     <Content Include="Scripts\AngularJS\app\js\mainMenu.js" />
+    <Content Include="Scripts\AngularJS\app\js\myWords.js" />
     <Content Include="Scripts\AngularJS\app\templates\app.html" />
-    <Content Include="Scripts\AngularJS\app\templates\mainMenu.html" />
+    <Content Include="Scripts\AngularJS\app\templates\home.html" />
+    <Content Include="Scripts\AngularJS\app\templates\myWords.html" />
     <Content Include="Scripts\AngularJS\gulpfile.js" />
     <Content Include="Scripts\AngularJS\node_modules\%40angular\common\bundles\common-testing.umd.js" />
     <Content Include="Scripts\AngularJS\node_modules\%40angular\common\bundles\common.umd.js" />
@@ -5658,10 +5660,10 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="Scripts\TewScripts\TewInfo.js" />
+    <Content Include="Views\Shared\LearningDesktop\_MainDesktopPage.cshtml" />
     <None Include="Views\Shared\LearningPhone\_MainPhonePage.cshtml" />
     <Content Include="Views\Tew\Index.cshtml" />
     <Content Include="Views\Shared\DownloadView.cshtml" />
-    <Content Include="Views\Angularjs\Index.cshtml" />
     <Content Include="Scripts\AngularJS\node_modules\%40angular\common\index.js.map" />
     <Content Include="Scripts\AngularJS\node_modules\%40angular\common\index.metadata.json" />
     <Content Include="Scripts\AngularJS\node_modules\%40angular\common\package.json" />
@@ -10728,7 +10730,6 @@
     <Content Include="Scripts\AngularJS\typings.json" />
     <Content Include="Views\Tew\Learning.cshtml" />
     <Content Include="Views\Shared\_LearningLayout.cshtml" />
-    <Content Include="Views\Shared\LearningDesktop\_MainDesktopPage.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -10807,7 +10808,8 @@
     <TypeScriptCompile Include="Scripts\AngularJS\app\ts\app.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\app\ts\boot.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\app\ts\main.ts" />
-    <TypeScriptCompile Include="Scripts\AngularJS\app\ts\mainMenu.ts" />
+    <TypeScriptCompile Include="Scripts\AngularJS\app\ts\home.ts" />
+    <TypeScriptCompile Include="Scripts\AngularJS\app\ts\myWords.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\node_modules\%40angular\common\index.d.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\node_modules\%40angular\common\src\common_module.d.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\node_modules\%40angular\common\src\directives\index.d.ts" />
