--- a/TewCloud/TewCloud.csproj
+++ b/TewCloud/TewCloud.csproj
@@ -257,7 +257,7 @@
     <Content Include="Scripts\AngularJS\app\js\myWords.js" />
     <Content Include="Scripts\AngularJS\app\templates\app.html" />
     <Content Include="Scripts\AngularJS\app\templates\home.html" />
-    <Content Include="Scripts\AngularJS\app\templates\myWords.html" />
+    <Content Include="Scripts\AngularJS\app\templates\addWord.html" />
     <Content Include="Scripts\AngularJS\gulpfile.js" />
     <Content Include="Scripts\AngularJS\node_modules\%40angular\common\bundles\common-testing.umd.js" />
     <Content Include="Scripts\AngularJS\node_modules\%40angular\common\bundles\common.umd.js" />
@@ -10809,7 +10809,7 @@
     <TypeScriptCompile Include="Scripts\AngularJS\app\ts\boot.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\app\ts\main.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\app\ts\home.ts" />
-    <TypeScriptCompile Include="Scripts\AngularJS\app\ts\myWords.ts" />
+    <TypeScriptCompile Include="Scripts\AngularJS\app\ts\addWord.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\node_modules\%40angular\common\index.d.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\node_modules\%40angular\common\src\common_module.d.ts" />
     <TypeScriptCompile Include="Scripts\AngularJS\node_modules\%40angular\common\src\directives\index.d.ts" />
