--- a/TewCloud/Scripts/AngularJS/package.json
+++ b/TewCloud/Scripts/AngularJS/package.json
@@ -3,7 +3,7 @@
   "name": "aspnet",
   "private": true,
   "scripts": {
-    "postinstall": "typings install",    
+    "postinstall": "typings install",
     "typings": "typings"
   },
   "dependencies": {
@@ -16,13 +16,13 @@
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
-    
+    "angular2-in-memory-web-api": "0.0.20",
     "core-js": "^2.4.1",
+    "gulp-install": "^0.6.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23",
-    "angular2-in-memory-web-api": "0.0.20"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "typescript": "^2.0.2",
