added membership provider and sign In\Up pages

--- a/TewCloud/Web.config
+++ b/TewCloud/Web.config
@@ -35,6 +35,14 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <customErrors mode="Off"></customErrors>
+		<authentication mode="Forms">
+			<forms loginUrl="~/Account/SignIn" timeout="3000" name="SignIn" />
+		</authentication>
+		<membership defaultProvider="TewMembershipProvider">
+			<providers>
+				<add name="TewMembershipProvider" type="TewCloud.Providers.TewMembershipProvider" />
+			</providers>
+		</membership>
   </system.web>
   <system.webServer>
     <handlers>
