--- a/TewCloud/TewCloud.csproj
+++ b/TewCloud/TewCloud.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Auth\UserProvider.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CheckUpdateController.cs" />
     <Compile Include="Controllers\ClientFilesInfoController.cs" />
     <Compile Include="Controllers\ClientFilesUpdateController.cs" />
@@ -200,8 +201,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\SyncHelper.cs" />
+    <Compile Include="Models\SignInModel.cs" />
+    <Compile Include="Models\SignUpModel.cs" />
     <Compile Include="Models\TewInfoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\TewMembershipProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
@@ -221,12 +225,22 @@
     <Content Include="Global.asax" />
     <Content Include="irregular_verbs.html" />
     <Content Include="Scripts\AngularJS\app\images\delete.png" />
+    <Content Include="Scripts\AngularJS\app\js\addWord.js" />
     <Content Include="Scripts\AngularJS\app\js\app.js" />
     <Content Include="Scripts\AngularJS\app\js\app.routes.js" />
     <Content Include="Scripts\AngularJS\app\js\boot.js" />
+    <Content Include="Scripts\AngularJS\app\js\home.js" />
     <Content Include="Scripts\AngularJS\app\js\main.js" />
     <Content Include="Scripts\AngularJS\app\js\mainMenu.js" />
+    <Content Include="Scripts\AngularJS\app\js\models\pickerTestModel.js" />
+    <Content Include="Scripts\AngularJS\app\js\models\userWords.js" />
+    <Content Include="Scripts\AngularJS\app\js\models\Word.js" />
+    <Content Include="Scripts\AngularJS\app\js\models\wordsCloudModel.js" />
     <Content Include="Scripts\AngularJS\app\js\myWords.js" />
+    <Content Include="Scripts\AngularJS\app\js\pickerTest.js" />
+    <Content Include="Scripts\AngularJS\app\js\services\constantStorage.js" />
+    <Content Include="Scripts\AngularJS\app\js\services\getPostService.js" />
+    <Content Include="Scripts\AngularJS\app\js\services\httpService.js" />
     <Content Include="Scripts\AngularJS\app\templates\app.html" />
     <Content Include="Scripts\AngularJS\app\templates\home.html" />
     <Content Include="Scripts\AngularJS\app\templates\addWord.html" />
@@ -255,6 +269,11 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\TewScripts\TewInfo.js" />
     <Content Include="Views\Tew\Index.cshtml" />
     <Content Include="Views\Shared\DownloadView.cshtml" />
@@ -263,6 +282,8 @@
     <Content Include="Scripts\AngularJS\typings.json" />
     <Content Include="Views\Tew\Learning.cshtml" />
     <Content Include="Views\Shared\_LearningLayout.cshtml" />
+    <Content Include="Views\Account\SignUp.cshtml" />
+    <Content Include="Views\Account\SignIn.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
