--- a/TewCloud/packages.config
+++ b/TewCloud/packages.config
@@ -8,6 +8,7 @@
   <package id="EntityFramework" version="6.1.3-beta1" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.3-beta1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.8.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
@@ -17,6 +18,7 @@
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
