--- a/TewCloud/Web.config
+++ b/TewCloud/Web.config
@@ -103,5 +103,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="EnglishLearnContext" connectionString="Data Source=|DataDirectory|\EnglishLearnDataBase.sdf" providerName="System.Data.SqlServerCe.4.0" />
+		<add name="EnglishLearnContext_Dev" connectionString="Data Source=|DataDirectory|\EnglishLearnDataBase_Dev.sdf" providerName="System.Data.SqlServerCe.4.0" />
   </connectionStrings>
 </configuration>
