--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalConfiguration.cs" />
     <Compile Include="Mail\IEmailSender.cs" />
     <Compile Include="Mail\YandexMailSender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
