--- a/EnglishLearnBLL/EnglishLearnBLL.csproj
+++ b/EnglishLearnBLL/EnglishLearnBLL.csproj
@@ -41,10 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\UserUpdateDateModel.cs" />
-    <Compile Include="Models\WordJsonModel.cs" />
+    <Compile Include="Models\WordModelModel.cs" />
     <Compile Include="Models\PickerTestModel.cs" />
     <Compile Include="Models\ResponseModel.cs" />
-    <Compile Include="Models\WordsCloudModel.cs" />
+    <Compile Include="Models\WordsFullModel.cs" />
     <Compile Include="Models\WordUpdateModel.cs" />
     <Compile Include="Models\WordViewModel.cs" />
     <Compile Include="Models\WriteTestModel.cs" />
