--- a/TewCloud/TewCloud.csproj
+++ b/TewCloud/TewCloud.csproj
@@ -180,24 +180,23 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Auth\UserProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CheckUpdateController.cs" />
-    <Compile Include="Controllers\ClientFilesInfoController.cs" />
-    <Compile Include="Controllers\ClientFilesUpdateController.cs" />
-    <Compile Include="Controllers\WebAppVersion\ApplicationMessageController.cs" />
-    <Compile Include="Controllers\WebAppVersion\ChangePasswordController.cs" />
-    <Compile Include="Controllers\WebAppVersion\DeleteWordController.cs" />
-    <Compile Include="Controllers\WebAppVersion\PickerTestsController.cs" />
-    <Compile Include="Controllers\WebAppVersion\ResetPasswordController.cs" />
-    <Compile Include="Controllers\WebAppVersion\UserInfoController.cs" />
-    <Compile Include="Controllers\WebAppVersion\WordsManagerController.cs" />
-    <Compile Include="Controllers\WebAppVersion\SignInController.cs" />
-    <Compile Include="Controllers\WebAppVersion\SignUpController.cs" />
+    <Compile Include="Controllers\Api\ApplicationMessageController.cs" />
+    <Compile Include="Controllers\Api\ChangePasswordController.cs" />
+    <Compile Include="Controllers\Api\DeleteWordController.cs" />
+    <Compile Include="Controllers\Api\PickerTestsController.cs" />
+    <Compile Include="Controllers\Api\ResetPasswordController.cs" />
+    <Compile Include="Controllers\Api\UserInfoController.cs" />
+    <Compile Include="Controllers\Api\UserStatController.cs" />
+    <Compile Include="Controllers\Api\WordsManagerController.cs" />
+    <Compile Include="Controllers\Api\SignInController.cs" />
+    <Compile Include="Controllers\Api\SignUpController.cs" />
     <Compile Include="Controllers\TewController.cs" />
     <Compile Include="Controllers\TewInfoController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
-    <Compile Include="Controllers\WebAppVersion\WordsLevelUpdaterController.cs" />
-    <Compile Include="Controllers\WebAppVersion\WordTranslaterController.cs" />
-    <Compile Include="Controllers\WebAppVersion\WriteTestsController.cs" />
+    <Compile Include="Controllers\Api\WordsLevelUpdaterController.cs" />
+    <Compile Include="Controllers\Api\WordTranslaterController.cs" />
+    <Compile Include="Controllers\Api\WriteTestsController.cs" />
+    <Compile Include="FIlters\UserActivityFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -205,6 +204,7 @@
     <Compile Include="Models\SignInModel.cs" />
     <Compile Include="Models\SignUpModel.cs" />
     <Compile Include="Models\TewInfoModel.cs" />
+    <Compile Include="Models\UserStatModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\TewMembershipProvider.cs" />
   </ItemGroup>
