--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -279,11 +279,14 @@
     <Content Include="StaticContent\app\js\services\commonHelper.js" />
     <Content Include="StaticContent\app\js\services\constantStorage.js" />
     <Content Include="StaticContent\app\js\services\httpService.js" />
+    <Content Include="StaticContent\app\js\services\pubSub.js" />
     <Content Include="StaticContent\app\templates\addWord.html" />
+    <Content Include="StaticContent\app\templates\addWordNext.html" />
     <Content Include="StaticContent\app\templates\app.html" />
+    <Content Include="StaticContent\app\templates\appNext.html" />
     <Content Include="StaticContent\app\templates\home.html" />
     <Content Include="StaticContent\app\templates\loadingAnimation.html" />
-    <Content Include="StaticContent\app\templates\myWords.html" />
+    <Content Include="StaticContent\app\templates\myWordsNext.html" />
     <Content Include="StaticContent\app\templates\pickerTest.html" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common-testing.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.js" />
