--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -254,6 +254,7 @@
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\FontAwesome.otf" />
     <None Include="Properties\PublishProfiles\tew2.pubxml" />
+    <None Include="Properties\PublishProfiles\tew3 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
@@ -264,6 +265,8 @@
     <Content Include="StaticContent\app\js\app.js" />
     <Content Include="StaticContent\app\js\app.routes.js" />
     <Content Include="StaticContent\app\js\boot.js" />
+    <Content Include="StaticContent\app\js\helpComponents\loadingAnimation.js" />
+    <Content Include="StaticContent\app\js\helpComponents\progressBar.js" />
     <Content Include="StaticContent\app\js\home.js" />
     <Content Include="StaticContent\app\js\loadingAnimation.js" />
     <Content Include="StaticContent\app\js\main.js" />
@@ -284,10 +287,12 @@
     <Content Include="StaticContent\app\templates\addWordNext.html" />
     <Content Include="StaticContent\app\templates\app.html" />
     <Content Include="StaticContent\app\templates\appNext.html" />
+    <Content Include="StaticContent\app\templates\helpComponents\loadingAnimation.html" />
+    <Content Include="StaticContent\app\templates\helpComponents\progressBar.html" />
     <Content Include="StaticContent\app\templates\home.html" />
-    <Content Include="StaticContent\app\templates\loadingAnimation.html" />
     <Content Include="StaticContent\app\templates\myWordsNext.html" />
     <Content Include="StaticContent\app\templates\pickerTest.html" />
+    <Content Include="StaticContent\app\templates\pickerTestNext.html" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common-testing.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.min.js" />
@@ -3573,6 +3578,7 @@
     <Content Include="StaticContent\node_modules\zone.js\lib\zone-spec\task-tracking.ts" />
     <Content Include="StaticContent\node_modules\zone.js\lib\zone-spec\wtf.ts" />
     <Content Include="StaticContent\node_modules\zone.js\lib\zone.ts" />
+    <Content Include="StaticContent\systemjs.config.js" />
     <Content Include="Views\Shared\DownloadView.cshtml" />
     <Content Include="Views\Tew\Index.cshtml" />
     <Content Include="Views\Shared\_TewLayout.cshtml" />
@@ -4647,7 +4653,6 @@
     <None Include="_bin_deployableAssemblies\amd64\sqlceca40.dll" />
     <None Include="_bin_deployableAssemblies\amd64\Microsoft.VC90.CRT\README_ENU.txt" />
     <None Include="_bin_deployableAssemblies\amd64\Microsoft.VC90.CRT\msvcr90.dll" />
-    <None Include="Properties\PublishProfiles\tew.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
