added modal window

--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -266,6 +266,7 @@
     <Content Include="StaticContent\app\js\app.routes.js" />
     <Content Include="StaticContent\app\js\boot.js" />
     <Content Include="StaticContent\app\js\helpComponents\loadingAnimation.js" />
+    <Content Include="StaticContent\app\js\helpComponents\modalWindow.js" />
     <Content Include="StaticContent\app\js\helpComponents\progressBar.js" />
     <Content Include="StaticContent\app\js\home.js" />
     <Content Include="StaticContent\app\js\loadingAnimation.js" />
@@ -286,6 +287,7 @@
     <Content Include="StaticContent\app\templates\addWord.html" />
     <Content Include="StaticContent\app\templates\app.html" />
     <Content Include="StaticContent\app\templates\helpComponents\loadingAnimation.html" />
+    <Content Include="StaticContent\app\templates\helpComponents\modalWindow.html" />
     <Content Include="StaticContent\app\templates\helpComponents\progressBar.html" />
     <Content Include="StaticContent\app\templates\home.html" />
     <Content Include="StaticContent\app\templates\myWords.html" />
