added modal window service

--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -284,7 +284,9 @@
     <Content Include="StaticContent\app\js\services\constantStorage.js" />
     <Content Include="StaticContent\app\js\services\httpService.js" />
     <Content Include="StaticContent\app\js\services\jqueryHelper.js" />
+    <Content Include="StaticContent\app\js\services\modalWindowServise.js" />
     <Content Include="StaticContent\app\js\services\pubSub.js" />
+    <Content Include="StaticContent\app\js\userStat.js" />
     <Content Include="StaticContent\app\templates\addWord.html" />
     <Content Include="StaticContent\app\templates\app.html" />
     <Content Include="StaticContent\app\templates\helpComponents\loadingAnimation.html" />
@@ -293,6 +295,7 @@
     <Content Include="StaticContent\app\templates\home.html" />
     <Content Include="StaticContent\app\templates\myWords.html" />
     <Content Include="StaticContent\app\templates\pickerTest.html" />
+    <Content Include="StaticContent\app\templates\userStat.html" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common-testing.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.min.js" />
