--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -4647,6 +4647,7 @@
     <Content Include="StaticContent\node_modules\systemjs\package.json" />
     <Content Include="StaticContent\node_modules\systemjs\README.md" />
     <Content Include="Views\WordsUploader\Index.cshtml" />
+    <Content Include="Views\WordsUploader\AddUserWords.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
