--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -205,6 +205,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\UserHelper.cs" />
+    <Compile Include="Models\GetUserWordsModel.cs" />
     <Compile Include="Models\SignInModel.cs" />
     <Compile Include="Models\SignUpModel.cs" />
     <Compile Include="Models\TewInfoModel.cs" />
