--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -266,45 +266,43 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="StaticContent\app\js\addWord.js" />
-    <Content Include="StaticContent\app\js\app.js" />
     <Content Include="StaticContent\app\js\app.routes.js" />
     <Content Include="StaticContent\app\js\boot.js" />
+    <Content Include="StaticContent\app\js\components\addWord.js" />
+    <Content Include="StaticContent\app\js\components\app.js" />
+    <Content Include="StaticContent\app\js\components\home.js" />
+    <Content Include="StaticContent\app\js\components\irregularVerbs.js" />
+    <Content Include="StaticContent\app\js\components\myWords.js" />
+    <Content Include="StaticContent\app\js\components\pickerTest.js" />
+    <Content Include="StaticContent\app\js\components\userStat.js" />
     <Content Include="StaticContent\app\js\helpComponents\loadingAnimation.js" />
     <Content Include="StaticContent\app\js\helpComponents\loadingLockDisplay.js" />
     <Content Include="StaticContent\app\js\helpComponents\modalWindow.js" />
     <Content Include="StaticContent\app\js\helpComponents\progressBar.js" />
-    <Content Include="StaticContent\app\js\home.js" />
-    <Content Include="StaticContent\app\js\irregularVerbs.js" />
-    <Content Include="StaticContent\app\js\loadingAnimation.js" />
+    <Content Include="StaticContent\app\js\helpers\commonHelper.js" />
+    <Content Include="StaticContent\app\js\helpers\constantStorage.js" />
+    <Content Include="StaticContent\app\js\helpers\jqueryHelper.js" />
     <Content Include="StaticContent\app\js\main.js" />
-    <Content Include="StaticContent\app\js\mainMenu.js" />
     <Content Include="StaticContent\app\js\models\pickerTestModel.js" />
     <Content Include="StaticContent\app\js\models\User.js" />
     <Content Include="StaticContent\app\js\models\userStatModel.js" />
     <Content Include="StaticContent\app\js\models\userWords.js" />
     <Content Include="StaticContent\app\js\models\Word.js" />
     <Content Include="StaticContent\app\js\models\wordsCloudModel.js" />
-    <Content Include="StaticContent\app\js\myWords.js" />
-    <Content Include="StaticContent\app\js\pickerTest.js" />
-    <Content Include="StaticContent\app\js\services\commonHelper.js" />
-    <Content Include="StaticContent\app\js\services\constantStorage.js" />
     <Content Include="StaticContent\app\js\services\httpService.js" />
-    <Content Include="StaticContent\app\js\services\jqueryHelper.js" />
     <Content Include="StaticContent\app\js\services\modalWindowServise.js" />
     <Content Include="StaticContent\app\js\services\pubSub.js" />
-    <Content Include="StaticContent\app\js\userStat.js" />
-    <Content Include="StaticContent\app\templates\addWord.html" />
-    <Content Include="StaticContent\app\templates\app.html" />
+    <Content Include="StaticContent\app\templates\components\addWord.html" />
+    <Content Include="StaticContent\app\templates\components\app.html" />
+    <Content Include="StaticContent\app\templates\components\home.html" />
+    <Content Include="StaticContent\app\templates\components\irregularVerbs.html" />
+    <Content Include="StaticContent\app\templates\components\myWords.html" />
+    <Content Include="StaticContent\app\templates\components\pickerTest.html" />
+    <Content Include="StaticContent\app\templates\components\userStat.html" />
     <Content Include="StaticContent\app\templates\helpComponents\loadingAnimation.html" />
     <Content Include="StaticContent\app\templates\helpComponents\loadingLockDisplay.html" />
     <Content Include="StaticContent\app\templates\helpComponents\modalWindow.html" />
     <Content Include="StaticContent\app\templates\helpComponents\progressBar.html" />
-    <Content Include="StaticContent\app\templates\home.html" />
-    <Content Include="StaticContent\app\templates\irregularVerbs.html" />
-    <Content Include="StaticContent\app\templates\myWords.html" />
-    <Content Include="StaticContent\app\templates\pickerTest.html" />
-    <Content Include="StaticContent\app\templates\userStat.html" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common-testing.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.min.js" />
