code refactoring of back-end

--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -40,7 +40,7 @@
 		</authentication>
 		<membership defaultProvider="TewMembershipProvider">
 			<providers>
-				<add name="TewMembershipProvider" type="TewCloud.Providers.TewMembershipProvider" />
+				<add name="TewMembershipProvider" type="WebSite.Providers.TewMembershipProvider" />
 			</providers>
 		</membership>
   </system.web>
